Border Gap issue with color - Marketing button

--- a/src/blocks/marketing-button/editor.scss
+++ b/src/blocks/marketing-button/editor.scss
@@ -5,7 +5,3 @@
 .editor-rich-text p.uagb-marketing-btn__prefix {
 	margin: 0 !important;
 }
-
-.wp-block-uagb-marketing-button a.uagb-marketing-btn__link:before {
-	z-index: 0;
-}
